--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,9 @@ title: Cooking Compass
 description:
 google_analytics:
 show_downloads: true
-remote_theme: "jekyll/minima@1e8a445"
+remote_theme: pages-themes/dinky@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 gems:
   - jekyll-mentions
