--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: Cooking Compass
-description:
-google_analytics:
+description: ""
+google_analytics: ""
 show_downloads: true
 remote_theme: pages-themes/dinky@v0.2.0
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-remote-theme
 
 gems:
   - jekyll-mentions
