--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: Cooking Compass
-description: ""
-google_analytics: ""
-show_downloads: true
-remote_theme: pages-themes/dinky@v0.2.0
-plugins:
-  - jekyll-remote-theme
+#title: Cooking Compass
+#description: ""
+#google_analytics: ""
+#show_downloads: true
+#remote_theme: pages-themes/dinky@v0.2.0
+#plugins:
+#  - jekyll-remote-theme
 
-gems:
-  - jekyll-mentions
+#gems:
+#  - jekyll-mentions
   
