--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,8 @@
-#title: Cooking Compass
-#description: ""
-#google_analytics: ""
-#show_downloads: true
-#remote_theme: pages-themes/dinky@v0.2.0
-#plugins:
-#  - jekyll-remote-theme
+title: Cooking Compass
+description: ""
+google_analytics: ""
+show_downloads: true
+remote_theme: "jekyll/minima@1e8a445"
 
-#gems:
-#  - jekyll-mentions
-  
+plugins:
+  - jekyll-mentions
